crystal-facet-uml (1.16.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Diagram exports can be triggered from command line
  * Cut + paste of relationships is possible

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 20 Oct 2019 19:30:00 +0200

crystal-facet-uml (1.15.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * The id of selected objects is displayed in the edit area
  * Child diagrams are layouted in a grid (in navigation view)

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 20 Oct 2019 12:30:00 +0200

crystal-facet-uml (1.14.2) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * gtk is initialized before data and ctrl packages --> fix for wine

 -- Andreas Warnke <cfu@andreaswarnke.de>  Fri, 06 Sep 2019 19:30:00 +0200

crystal-facet-uml (1.14.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * background image added to intro screen.
  * compatibility to GTK 3.6 established, newer features replaced
  * pthread dependency replaced by glib functions
  * build for wine using mingw

 -- Andreas Warnke <cfu@andreaswarnke.de>  Mon, 02 Sep 2019 21:30:00 +0200

crystal-facet-uml (1.14.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * all features (except lifelines) are hidden in scenario-based and box/list
    diagrams
  * non-global relationships are hidden in scenario-based and all in box/list
    diagrams
  * exporting descriptions of hidden relationships and features is suppressed
  * any classifier can be displayed as named instance or as anonymous instance.

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 14 Jul 2019 11:30:00 +0200

crystal-facet-uml (1.13.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * sqlite3_db_cacheflush() is only called if on the build system and on the
    target system available.
    This is a bugfix for the sudden termination on older linuxes when clicking
    on the commit (Ctrl-S) button.

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 23 Jun 2019 15:30:00 +0200
